--- a/index.html
+++ b/index.html
@@ -17,21 +17,22 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="header">
-      <div class="container header-content">
-        <div class="logo-area">
-          <!-- Se não tiver logo ainda, pode deixar só o texto -->
-          <img src="./LogoNewMind.png" alt="Logo NewMind" class="logo" />
-        </div>
+   <header class="header">
+  <div class="container header-content">
+    <div class="logo-area">
+      <img src="./LogoNewMind.png" alt="Logo NewMind" class="logo" />
+    </div>
 
-        <nav class="nav">
-          <a href="#sobre">Sobre</a>
-          <a href="#como-funciona">Como funciona</a>
-          <a href="#para-quem">Para quem</a>
-          <a href="#contato">Contato</a>
-        </nav>
-      </div>
-    </header>
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="faq.html">FAQ</a>
+      <a href="contato.html">Contato</a>
+      <a href="integrantes.html">Integrantes</a>
+    </nav>
+  </div>
+</header>
+
 
     <main>
       <!-- HERO -->
