Criada página diário e ajustado css sobre ela

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
 
 
     <main>
-      <!-- HERO -->
       <section class="hero">
         <div class="container hero-content">
           <div class="hero-text">
@@ -48,13 +47,10 @@
 
             <div class="hero-buttons">
               <a href="#" class="btn primary">Acessar como empresa</a>
-              <a href="#" class="btn outline">Acessar como ex-colaborador</a>
+              <a href="diario.html" class="btn outline">Acessar como ex-colaborador</a>
               <a href="#" class="btn ghost">Acessar como clínica</a>
             </div>
 
-            <span class="hero-note">
-              Projeto desenvolvido para a disciplina Software Engineering and Business Model – FIAP.
-            </span>
           </div>
 
           <div class="hero-card">
@@ -69,7 +65,6 @@
         </div>
       </section>
 
-      <!-- SOBRE / PROBLEMA -->
       <section id="sobre" class="section">
         <div class="container section-grid">
           <div>
@@ -102,7 +97,6 @@
         </div>
       </section>
 
-      <!-- COMO FUNCIONA -->
       <section id="como-funciona" class="section section-alt">
         <div class="container">
           <h2>Como funciona</h2>
@@ -151,7 +145,6 @@
         </div>
       </section>
 
-      <!-- PARA QUEM -->
       <section id="para-quem" class="section">
         <div class="container section-grid">
           <div>
@@ -173,23 +166,6 @@
         </div>
       </section>
 
-      <!-- CONTATO / RODAPÉ -->
-      <section id="contato" class="section section-alt">
-        <div class="container contato">
-          <div>
-            <h2>Contato do grupo</h2>
-            <p>
-              Projeto desenvolvido pelos alunos da FIAP – turma 1TDSPR-2025,
-              na disciplina Software Engineering and Business Model.
-            </p>
-            <ul class="list">
-              <li>Letícia Andrade Oliveira – RA 567653</li>
-              <li>Lucas Marcelino Pompeu – RA 567010</li>
-              <li>Renan Lima Santos – RA 568321</li>
-            </ul>
-          </div>
-        </div>
-      </section>
     </main>
 
     <footer class="footer">
@@ -199,7 +175,6 @@
       </div>
     </footer>
 
-    <!-- JS futuro -->
     <script src="./js/main.js"></script>
   </body>
 </html>
