--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="hero-buttons">
               <a href="#" class="btn primary">Acessar como empresa</a>
               <a href="diario.html" class="btn outline">Acessar como ex-colaborador</a>
-              <a href="#" class="btn ghost">Acessar como clínica</a>
+              <a href="painel-clinica.html" class="btn ghost">Acessar como clínica</a>
             </div>
 
           </div>
