--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>NewMind – Tecnologia que cuida de pessoas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Fonte Google -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -13,15 +12,19 @@
       rel="stylesheet"
     />
 
-    <!-- CSS -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-   <header class="header">
+ <header class="header">
   <div class="container header-content">
     <div class="logo-area">
       <img src="./LogoNewMind.png" alt="Logo NewMind" class="logo" />
+      <span class="logo-text">NewMind</span>
     </div>
+
+    <button class="menu-toggle" aria-label="Abrir menu">
+      ☰
+    </button>
 
     <nav class="nav">
       <a href="index.html">Home</a>
@@ -32,6 +35,7 @@
     </nav>
   </div>
 </header>
+
 
 
     <main>
