--- a/integrantes.html
+++ b/integrantes.html
@@ -15,21 +15,27 @@
   <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
-  <header class="header">
-    <div class="container header-content">
-      <div class="logo-area">
-        <img src="./LogoNewMind.png" alt="Logo NewMind" class="logo" />
-      </div>
-
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="sobre.html">Sobre</a>
-        <a href="faq.html">FAQ</a>
-        <a href="contato.html">Contato</a>
-        <a href="integrantes.html" class="active">Integrantes</a>
-      </nav>
+ <header class="header">
+  <div class="container header-content">
+    <div class="logo-area">
+      <img src="./LogoNewMind.png" alt="Logo NewMind" class="logo" />
+      <span class="logo-text">NewMind</span>
     </div>
-  </header>
+    
+    <button class="menu-toggle" aria-label="Abrir menu">
+      ☰
+    </button>
+
+    <nav class="nav">
+      <a href="index.html">Home</a>
+      <a href="sobre.html">Sobre</a>
+      <a href="faq.html">FAQ</a>
+      <a href="contato.html">Contato</a>
+      <a href="integrantes.html">Integrantes</a>
+    </nav>
+  </div>
+</header>
+
 
   <main class="section">
     <div class="container">
