--- a/contato.html
+++ b/contato.html
@@ -30,7 +30,7 @@
       <a href="index.html">Home</a>
       <a href="sobre.html">Sobre</a>
       <a href="faq.html">FAQ</a>
-      <a href="contato.html">Contato</a>
+      <a href="contato.html" class="active">Contato</a>
       <a href="integrantes.html">Integrantes</a>
     </nav>
   </div>
