--- a/faq.html
+++ b/faq.html
@@ -29,7 +29,7 @@
     <nav class="nav">
       <a href="index.html">Home</a>
       <a href="sobre.html">Sobre</a>
-      <a href="faq.html">FAQ</a>
+      <a href="faq.html" class="active">FAQ</a>
       <a href="contato.html">Contato</a>
       <a href="integrantes.html">Integrantes</a>
     </nav>
