--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </button>
 
     <nav class="nav">
-      <a href="index.html">Home</a>
+      <a href="index.html" class="active">Home</a>
       <a href="sobre.html">Sobre</a>
       <a href="faq.html">FAQ</a>
       <a href="contato.html">Contato</a>
