--- a/integrantes.html
+++ b/integrantes.html
@@ -21,7 +21,7 @@
       <img src="./LogoNewMind.png" alt="Logo NewMind" class="logo" />
       <span class="logo-text">NewMind</span>
     </div>
-    
+
     <button class="menu-toggle" aria-label="Abrir menu">
       ☰
     </button>
@@ -31,7 +31,7 @@
       <a href="sobre.html">Sobre</a>
       <a href="faq.html">FAQ</a>
       <a href="contato.html">Contato</a>
-      <a href="integrantes.html">Integrantes</a>
+      <a href="integrantes.html" class="active">Integrantes</a>
     </nav>
   </div>
 </header>
