--- a/sobre.html
+++ b/sobre.html
@@ -28,7 +28,7 @@
 
     <nav class="nav">
       <a href="index.html">Home</a>
-      <a href="sobre.html">Sobre</a>
+      <a href="sobre.html" class="active">Sobre</a>
       <a href="faq.html">FAQ</a>
       <a href="contato.html">Contato</a>
       <a href="integrantes.html">Integrantes</a>
