inserido imagens dos integrantes e dados faltantes

--- a/integrantes.html
+++ b/integrantes.html
@@ -43,6 +43,7 @@
 
       <div class="cards integrantes">
         <article class="card integrante-card">
+          <img src="./leticia.jpeg" alt="Foto Letícia" />
           <h3>Letícia Andrade Oliveira</h3>
           <p>RM: 567653</p>
           <p>1TDSPR-2025</p>
@@ -53,22 +54,24 @@
         </article>
 
         <article class="card integrante-card">
+          <img src="./lucas.jpg" alt="Foto Lucas" />
           <h3>Lucas Marcelino Pompeu</h3>
           <p>RM: 567010</p>
           <p>1TDSPR-2025</p>
           <div class="links-integrante">
-            <a href="#" target="_blank">LinkedIn</a>
-            <a href="#" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/lucaspompeu/" target="_blank">LinkedIn</a>
+            <a href="https://github.com/PompeuDev" target="_blank">GitHub</a>
           </div>
         </article>
 
         <article class="card integrante-card">
+          <img src="./renan.jpg" alt="Foto Renan" />
           <h3>Renan Lima Santos</h3>
           <p>RM: 568321</p>
           <p>1TDSPR-2025</p>
           <div class="links-integrante">
             <a href="https://www.linkedin.com/in/renanlimasantos?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank">LinkedIn</a>
-            <a href="#" target="_blank">GitHub</a>
+            <a href="https://github.com/renanlima-hub" target="_blank">GitHub</a>
           </div>
         </article>
       </div>
