Criado pasta para imagens e ajustada as imagens integrantes e logo em todos html

--- a/integrantes.html
+++ b/integrantes.html
@@ -18,7 +18,7 @@
  <header class="header">
   <div class="container header-content">
     <div class="logo-area">
-      <img src="./LogoNewMind.png" alt="Logo NewMind" class="logo" />
+      <img src="./assets/LogoNewMind.png" alt="Logo NewMind" class="logo" />
       <span class="logo-text">NewMind</span>
     </div>
 
@@ -43,7 +43,7 @@
 
       <div class="cards integrantes">
         <article class="card integrante-card">
-          <img src="./leticia.jpeg" alt="Foto Letícia" />
+          <img src="./assets/leticia.jpeg" alt="Foto Letícia" />
           <h3>Letícia Andrade Oliveira</h3>
           <p>RM: 567653</p>
           <p>1TDSPR-2025</p>
@@ -54,7 +54,7 @@
         </article>
 
         <article class="card integrante-card">
-          <img src="./lucas.jpg" alt="Foto Lucas" />
+          <img src="./assets/lucas.jpg" alt="Foto Lucas" />
           <h3>Lucas Marcelino Pompeu</h3>
           <p>RM: 567010</p>
           <p>1TDSPR-2025</p>
@@ -65,7 +65,7 @@
         </article>
 
         <article class="card integrante-card">
-          <img src="./renan.jpg" alt="Foto Renan" />
+          <img src="./assets/renan.jpg" alt="Foto Renan" />
           <h3>Renan Lima Santos</h3>
           <p>RM: 568321</p>
           <p>1TDSPR-2025</p>
