--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
  <header class="header">
   <div class="container header-content">
     <div class="logo-area">
-      <img src="./LogoNewMind.png" alt="Logo NewMind" class="logo" />
+      <img src="./assets/LogoNewMind.png" alt="Logo NewMind" class="logo" />
       <span class="logo-text">NewMind</span>
     </div>
 
